tests/tooling/fixtures/native/recovery/negative/negative_for_step_bitwise_compound_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeForStepBitwiseCompoundUnknownTarget;

fn main() -> i32 {
  for (let i = 0; i < 2; missing >>= 1) {
    let keep = i;
  }
  return 0;
}
